--- a/BasicHtml/CatPhotoApp.html
+++ b/BasicHtml/CatPhotoApp.html
@@ -3,47 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
     <title>Document</title>
+    <style>
+        h2 {
+            color: blue;
+            font-family: Lobster, monospace;
+        }
+        .red-text {
+            color: red;
+        }
+        p {
+            font-size: 16px;
+            font-family: monospace;
+        }
+        .smaller-image {
+            width: 100px;
+        }
+        .thick-green-border {
+            border-width: 10px;
+            border-color: green;
+            border-style: solid;
+            border-radius: 50%;
+        }
+        .silver-background {
+            background-color: silver;
+        }
+
+        #cat-photo-form {
+            background-color: green;
+        }
+        [type='checkbox'] {
+            margin: 10px 0 15px 0;
+        }
+
+    </style>
 </head>
 <body>
-    <h2>CatPhotoApp</h2>
+    <!-- <h2 style="color : red;">CatPhotoApp</h2> Inline CSS or Cascading Style Sheet -->
+    <h2 class="red-text">CatPhotoApp</h2> 
     <main>
         <a href="#footer">Jump to Bottom</a>
-        <p>
+        <p class="red-text">
             View More <a href="http://freecatphotoapp.com" target="_blank">cat photos</a>
         </p> 
-        <a href="#"><img src="https://bit.ly/fcc-relaxing-cat" alt="Relaxing Cat"></a>    
-        <p>
-            Things cats love:
-        </p>
-        <ul>
-            <li>Cat nip</li>
-            <li>Laser pointers</li>
-            <li>Lasagna</li>
-        </ul>
-        <p>
-            Top 3 things cats hate:
-        </p>
-        <ol>
-            <li>Flea treatment</li>
-            <li>Thunder</li>
-            <li>Other cats</li>
-        </ol>
-        <form action="/submit-cat-photo">            
+        <a href="#"><img class="smaller-image thick-green-border" src="https://bit.ly/fcc-relaxing-cat" alt="Relaxing Cat"></a>    
+        <div class="silver-background">
+            <p>
+                Things cats love:
+            </p>
+            <ul>
+                <li>Cat nip</li>
+                <li>Laser pointers</li>
+                <li>Lasagna</li>
+            </ul>
+            <p>
+                Top 3 things cats hate:
+            </p>
+            <ol>
+                <li>Flea treatment</li>
+                <li>Thunder</li>
+                <li>Other cats</li>
+            </ol>
+        </div>
+        <form action="/submit-cat-photo" id="cat-photo-form">            
             <label for="indoor">
-                <input id="indoor" type="radio" name="indoor-outdoor"> Indoor
+                <input id="indoor" value="indoor"type="radio" name="indoor-outdoor" checked> Indoor
             </label>
             <label for="outdoor">
-                <input id="outdoor" type="radio" name="indoor-outdoor"> Outdoor
+                <input id="outdoor" value="outdoor" type="radio" name="indoor-outdoor"> Outdoor
             </label><br>
             <label for="loving">
-                <input id="loving" type="checkbox" name="personality"> Loving
+                <input id="loving" value="loving" type="checkbox" name="personality" checked> Loving
             </label>
             <label for="lazy">
-                <input id="lazy" type="checkbox" name="personality"> Lazy
+                <input id="lazy" value="lazy" type="checkbox" name="personality"> Lazy
             </label>
             <label for="energetic">
-                <input id="energetic" type="checkbox" name="personality"> Energetic
+                <input id="energetic" value="energetic" type="checkbox" name="personality"> Energetic
             </label><br>
             <input type="text" placeholder="Cat photo URL" required>
             <button type="submit">Submit</button>
