--- a/htmlPractice.html
+++ b/htmlPractice.html
@@ -146,6 +146,33 @@
         color: white;
         padding: 0.25em;
     }
+    .header-2 {
+        background-color: hsl(180, 90%, 35%);
+        color: #fff;
+    }
+    .nav-2 {
+        background-color: hsl(180, 80%, 25%);
+    }
+
+    .h1-2 {
+        text-indent: 10px;
+        padding-top: 10px;
+    }
+
+    .nav-2 ul {
+        margin: 0px;
+        padding: 5px 0px 5px 30px;
+    }
+
+    .nav-2 li {
+        display: inline;
+        margin-right: 20px;
+    }
+
+    .a-2 {
+        text-decoration: none;
+        color: inherit;
+    }
 
     .h2-1 {
         color: #09a7a1;
@@ -235,6 +262,18 @@
         <div class="greenSquareDiv inline-div"></div>
         <div class="cyanSquareDiv1 inline-div"></div>
         <div class="blueSquareDiv2 inline-div"></div>
+    </div>
+    <div>
+        <header class="header-2">
+            <h1 class="h1-2">Cooking with FCC!</h1>
+            <nav class="nav-2">
+                <ul>
+                    <li><a class="a-2" href="#">Home</a></li>
+                    <li><a class="a-2" href="#">Classes</a></li>
+                    <li><a class="a-2" href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
     </div>
 
 
