--- a/ResponsiveWeb/FlexBox.html
+++ b/ResponsiveWeb/FlexBox.html
@@ -26,7 +26,10 @@
       height: 200px;
       /* flex-shrink: 1; */
       /* flex-grow: 1; */
-      flex-basis: 10em;
+      /* flex-basis: 10em; */
+      flex: 2 2 150px;
+      order: 2;
+      align-self: center;
     }
   
     #box-2 {
@@ -35,7 +38,10 @@
       height: 200px;
       /* flex-shrink: 2; */
       /* flex-grow: 2; */
-      flex-basis: 20em;
+      /* flex-basis: 20em; */
+      flex: 1 1 150px;
+      order: 1;
+      align-self: flex-end;
     }
     #box-3 {
     background-color: violet;
