Added more CSS and HTML

--- a/ResponsiveWeb/Projects/TributePage.html
+++ b/ResponsiveWeb/Projects/TributePage.html
@@ -12,9 +12,40 @@
             <h1 id="title">Ken Griffey Jr.</h1>
             <p>George Kenneth Griffey Jr. nicknamed "Junior" and "the Kid"</p>
         </header>
-        <div id="img-div">
+        <figure id="img-div">
             <img id="image" src="Images/250px-Ken_Griffey,_Jr._June_2009.jpg" alt="">
-        </div>    
+            <figcaption id="img-caption">Ken Griffey Jr. playing for the Seattle Mariners in 2009</figcaption>
+        </figure> 
+        <section id="tribute-info">
+            <h2>Ken Griffey Jr baseball career.</h2>
+            <ul>
+                <li><strong>Teams</strong></li>
+                <li>Seattle Mariners (1989-1999)</li>
+                <li>Cincinnati Reds (200-2008)</li>
+                <li>Chicago White Sox (2008)</li>
+                <li>Seattle Mariners (2009-2010)</li>
+            </ul>
+            <ul>
+                <li><strong>Career highlights and awards</strong></li>
+                <li>13 time All-Star (1990-2000, 2004, 2007)</li>
+                <li>AL MVP (1997)</li>
+                <li>10 time Gold Glove Award (1990-1999)</li>
+                <li>7 time Silver Slugger Award (1991, 1993, 1994, 1996-1999)</li>
+                <li>NL Comeback Player of the Year (2005)</li>
+                <li>4 time AL home run leader (1994, 1997-1999</li>
+                <li>AL RBI leader (1997)</li>
+                <li>Seattle Mariners No. 24 retired</li>
+                <li>Seattle Mariners Hall of Fame</li>
+                <li>Cincinnati Reds Hall of Fame</li>
+                <li>Major League Baseball All-Century Team</li>
+                <li>Baseball Hall of Fame (2016) (99.32% first ballot votes)</li>
+            </ul>
+        </section> 
+        <section id="tribute-links">
+            <p>For more information see the following link <a id="tribute-link" href="https://en.wikipedia.org/wiki/Ken_Griffey_Jr." target="_blank">Ken Griffey Jr. Wikipedia.</a></p>
+        </section>  
     </main>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js">
+    </script>
 </body>
 </html>
